# xingyuhuiju2026qiansaizuopinSLE-AI-IMU

./: .gitignore  README.md
.cursor/skills/: README.md
HelloKotlin/: gradle.properties
HelloKotlin/app/: build.gradle.kts
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  utils.py
backend/releases/: README.md  latest.json
backend/scripts/: deploy.sh
bs20/: README.md
bs20/application/paibing/: CMakeLists.txt
bs20/application/paibing/ble/: CMakeLists.txt  mac_config.h  paibing_app.c  paibing_ble_policy.c  paibing_ble_policy.h  paibing_ble_sensor_adv.c  paibing_ble_sensor_adv.h  paibing_ble_uart.c  paibing_ble_uart.h
bs20/application/paibing/common/: CMakeLists.txt  main.c  paibing_imu.c  paibing_imu.h  paibing_transport.h  startup.S
bs20/application/paibing/sle/: CMakeLists.txt  mac_config.h  paibing_app.c  paibing_multi_mode.c  paibing_multi_mode.h  paibing_sle_server.c  paibing_sle_server.h  paibing_sle_server_adv.c  paibing_sle_server_adv.h
bs20/application/paibing/version/: build_version_info.h
bs20/docs/: 主控对接说明-远距离二进制版.md  主控对接说明.md  代码文件索引.md  固件变更记录.md
bs20/integration/: README.md  SDK集成说明.md  app_os_init.patch
bs20/tools/: build_paibing_ble.sh  build_paibing_sle.sh  setup_paibing_ble_prebuild.sh
docs/: BS20端架构与技术实现_答辩.txt  README.md  仓库目录说明.md  开发过程与代码要点.md  联调快速指南.md
handoff-board/: HTTP上报接口.md  README.md  ThingsKit-MQTT参考.md  架构与数据流.md  联调示例.md
ss928/: README.md
ss928/docs/: IMU解析与去重实现.md  (+3 more)
(+201 files in other folders)
